src/deps/llama.cpp/llama.h

    
    struct llama_model;
    struct llama_context;
    typedef int32_t llama_seq_id;
    enum llama_vocab_type {
        LLAMA_VOCAB_TYPE_NONE = 0, 
        LLAMA_VOCAB_TYPE_SPM  = 1, 
        LLAMA_VOCAB_TYPE_BPE  = 2, 
        LLAMA_VOCAB_TYPE_WPM  = 3, 
    };
    enum llama_rope_type {
        LLAMA_ROPE_TYPE_NONE = -1,
        LLAMA_ROPE_TYPE_NORM =  0,
        LLAMA_ROPE_TYPE_NEOX =  2,
        LLAMA_ROPE_TYPE_GLM  =  4,
    };
    enum llama_ftype {
        LLAMA_FTYPE_ALL_F32              = 0,
        LLAMA_FTYPE_MOSTLY_F16           = 1,  
        LLAMA_FTYPE_MOSTLY_Q4_0          = 2,  
        LLAMA_FTYPE_MOSTLY_Q4_1          = 3,  
        LLAMA_FTYPE_MOSTLY_Q4_1_SOME_F16 = 4,  
        LLAMA_FTYPE_MOSTLY_Q8_0          = 7,  
        LLAMA_FTYPE_MOSTLY_Q5_0          = 8,  
        LLAMA_FTYPE_MOSTLY_Q5_1          = 9,  
        LLAMA_FTYPE_MOSTLY_Q2_K          = 10, 
        LLAMA_FTYPE_MOSTLY_Q3_K_S        = 11, 
        LLAMA_FTYPE_MOSTLY_Q3_K_M        = 12, 
        LLAMA_FTYPE_MOSTLY_Q3_K_L        = 13, 
        LLAMA_FTYPE_MOSTLY_Q4_K_S        = 14, 
        LLAMA_FTYPE_MOSTLY_Q4_K_M        = 15, 
        LLAMA_FTYPE_MOSTLY_Q5_K_S        = 16, 
        LLAMA_FTYPE_MOSTLY_Q5_K_M        = 17, 
        LLAMA_FTYPE_MOSTLY_Q6_K          = 18, 
        LLAMA_FTYPE_MOSTLY_IQ2_XXS       = 19, 
        LLAMA_FTYPE_MOSTLY_IQ2_XS        = 20, 
        LLAMA_FTYPE_MOSTLY_Q2_K_S        = 21, 
        LLAMA_FTYPE_MOSTLY_IQ3_XS        = 22, 
        LLAMA_FTYPE_MOSTLY_IQ3_XXS       = 23, 
        LLAMA_FTYPE_MOSTLY_IQ1_S         = 24, 
        LLAMA_FTYPE_MOSTLY_IQ4_NL        = 25, 
        LLAMA_FTYPE_MOSTLY_IQ3_S         = 26, 
        LLAMA_FTYPE_MOSTLY_IQ3_M         = 27, 
        LLAMA_FTYPE_MOSTLY_IQ2_S         = 28, 
        LLAMA_FTYPE_MOSTLY_IQ2_M         = 29, 
        LLAMA_FTYPE_MOSTLY_IQ4_XS        = 30, 
        LLAMA_FTYPE_MOSTLY_IQ1_M         = 31, 
        LLAMA_FTYPE_GUESSED = 1024, 
    };
    enum llama_rope_scaling_type {
        LLAMA_ROPE_SCALING_TYPE_UNSPECIFIED = -1,
        LLAMA_ROPE_SCALING_TYPE_NONE        = 0,
        LLAMA_ROPE_SCALING_TYPE_LINEAR      = 1,
        LLAMA_ROPE_SCALING_TYPE_YARN        = 2,
        LLAMA_ROPE_SCALING_TYPE_MAX_VALUE   = LLAMA_ROPE_SCALING_TYPE_YARN,
    };
    enum llama_pooling_type {
        LLAMA_POOLING_TYPE_UNSPECIFIED = -1,
        LLAMA_POOLING_TYPE_NONE = 0,
        LLAMA_POOLING_TYPE_MEAN = 1,
        LLAMA_POOLING_TYPE_CLS  = 2,
    };
    enum llama_split_mode {
        LLAMA_SPLIT_MODE_NONE    = 0, 
        LLAMA_SPLIT_MODE_LAYER   = 1, 
        LLAMA_SPLIT_MODE_ROW     = 2, 
    };
    typedef bool (*llama_progress_callback)(float progress, void *ctx);
    struct llama_model_kv_override {
        char key[128];
        enum llama_model_kv_override_type tag;
        union {
            int64_t int_value;
            double float_value;
            bool bool_value;
        };
    };
    struct llama_model_params {
        int32_t n_gpu_layers; 
        enum llama_split_mode split_mode; 
        int32_t main_gpu;
        const float * tensor_split;
        llama_progress_callback progress_callback;
        void * progress_callback_user_data;
        const struct llama_model_kv_override * kv_overrides;
        bool vocab_only; 
        bool use_mmap;   
        bool use_mlock;  
    };
    struct llama_context_params {
        uint32_t seed;              
        uint32_t n_ctx;             
        uint32_t n_batch;           
        uint32_t n_ubatch;          
        uint32_t n_seq_max;         
        uint32_t n_threads;         
        uint32_t n_threads_batch;   
        enum llama_rope_scaling_type rope_scaling_type; 
        enum llama_pooling_type      pooling_type;      
        float    rope_freq_base;   
        float    rope_freq_scale;  
        float    yarn_ext_factor;  
        float    yarn_attn_factor; 
        float    yarn_beta_fast;   
        float    yarn_beta_slow;   
        uint32_t yarn_orig_ctx;    
        float    defrag_thold;     
        ggml_backend_sched_eval_callback cb_eval;
        void * cb_eval_user_data;
        enum ggml_type type_k; 
        enum ggml_type type_v; 
        bool logits_all;  
        bool embeddings;  
        bool offload_kqv; 
        ggml_abort_callback abort_callback;
        void *              abort_callback_data;
    };
    typedef struct llama_model_quantize_params {
        int32_t nthread;                     
        enum llama_ftype ftype;              
        enum ggml_type output_tensor_type;   
        enum ggml_type token_embedding_type; 
        bool allow_requantize;               
        bool quantize_output_tensor;         
        bool only_copy;                      
        bool pure;                           
        void * imatrix;                      
        void * kv_overrides;                 
    } llama_model_quantize_params;
    LLAMA_API struct llama_model_params llama_model_default_params(void);
    LLAMA_API struct llama_context_params llama_context_default_params(void);
    LLAMA_API struct llama_model_quantize_params llama_model_quantize_default_params(void);
    LLAMA_API void llama_backend_init(void);
    LLAMA_API void llama_numa_init(enum ggml_numa_strategy numa);
    LLAMA_API void llama_backend_free(void);
    LLAMA_API struct llama_model * llama_load_model_from_file(
                             const char * path_model,
            struct llama_model_params     params);
    LLAMA_API void llama_free_model(struct llama_model * model);
    LLAMA_API struct llama_context * llama_new_context_with_model(
                     struct llama_model * model,
            struct llama_context_params   params);
    LLAMA_API void llama_free(struct llama_context * ctx);
    LLAMA_API int64_t llama_time_us(void);
    LLAMA_API size_t llama_max_devices(void);
    LLAMA_API bool llama_supports_mmap       (void);
    LLAMA_API bool llama_supports_mlock      (void);
    LLAMA_API bool llama_supports_gpu_offload(void);
    LLAMA_API const struct llama_model * llama_get_model(const struct llama_context * ctx);
    LLAMA_API uint32_t llama_n_ctx      (const struct llama_context * ctx);
    LLAMA_API uint32_t llama_n_batch    (const struct llama_context * ctx);
    LLAMA_API uint32_t llama_n_ubatch   (const struct llama_context * ctx);
    LLAMA_API uint32_t llama_n_seq_max  (const struct llama_context * ctx);
    LLAMA_API enum llama_vocab_type llama_vocab_type(const struct llama_model * model);
    LLAMA_API enum llama_rope_type  llama_rope_type (const struct llama_model * model);
    LLAMA_API int32_t llama_n_vocab    (const struct llama_model * model);
    LLAMA_API int32_t llama_n_ctx_train(const struct llama_model * model);
    LLAMA_API int32_t llama_n_embd     (const struct llama_model * model);
    LLAMA_API int32_t llama_n_layer    (const struct llama_model * model);
    LLAMA_API float llama_rope_freq_scale_train(const struct llama_model * model);
    LLAMA_API int32_t llama_model_meta_val_str(const struct llama_model * model, const char * key, char * buf, size_t buf_size);
    LLAMA_API int32_t llama_model_meta_count(const struct llama_model * model);
    LLAMA_API int32_t llama_model_meta_key_by_index(const struct llama_model * model, int32_t i, char * buf, size_t buf_size);
    LLAMA_API int32_t llama_model_meta_val_str_by_index(const struct llama_model * model, int32_t i, char * buf, size_t buf_size);
    LLAMA_API int32_t llama_model_desc(const struct llama_model * model, char * buf, size_t buf_size);
    LLAMA_API uint64_t llama_model_size(const struct llama_model * model);
    LLAMA_API uint64_t llama_model_n_params(const struct llama_model * model);
    LLAMA_API struct ggml_tensor * llama_get_model_tensor(struct llama_model * model, const char * name);
    LLAMA_API uint32_t llama_model_quantize(
            const char * fname_inp,
            const char * fname_out,
            const llama_model_quantize_params * params);
    LLAMA_API int32_t llama_model_apply_lora_from_file(
            const struct llama_model * model,
                          const char * path_lora,
                               float   scale,
                          const char * path_base_model,
                             int32_t   n_threads);
    LLAMA_API int32_t llama_control_vector_apply(
            struct llama_context * lctx,
                     const float * data,
                          size_t   len,
                         int32_t   n_embd,
                         int32_t   il_start,
                         int32_t   il_end);
    struct llama_kv_cache_view_cell {
        llama_pos pos;
    };
    struct llama_kv_cache_view {
        int32_t n_cells;
        int32_t n_seq_max;
        int32_t token_count;
        int32_t used_cells;
        int32_t max_contiguous;
        int32_t max_contiguous_idx;
        struct llama_kv_cache_view_cell * cells;
        llama_seq_id * cells_sequences;
    };
    LLAMA_API struct llama_kv_cache_view llama_kv_cache_view_init(const struct llama_context * ctx, int32_t n_seq_max);
    LLAMA_API void llama_kv_cache_view_free(struct llama_kv_cache_view * view);
    LLAMA_API void llama_kv_cache_view_update(const struct llama_context * ctx, struct llama_kv_cache_view * view);
    LLAMA_API int32_t llama_get_kv_cache_token_count(const struct llama_context * ctx);
    LLAMA_API int32_t llama_get_kv_cache_used_cells(const struct llama_context * ctx);
    LLAMA_API void llama_kv_cache_clear(
            struct llama_context * ctx);
struct ggml_tensor;